# RAG_grad_codex

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  document_loader.py  llms.py  main.py  pyproject.toml  requirements.txt  retriever.py  streamlit_app.py  test.ipynb
.claude/: settings.local.json
.claude/commands/: download-docs.md
app/: api.py  llms.py  rag.py  retriever.py
faiss_index/: index.faiss  index.pkl
src/: knowledge_base.md  knowledge_base.txt
static/: index.html
